# grawantura

./: .gitignore  Makefile  docker-compose.yaml
backend/: Dockerfile
backend/code/: alembic.ini  conftest.py  entrypoint  ipython_config.py  pyproject.toml
backend/code/env/: ipython_config.py  profile
backend/code/grawantura/: webapp.py
backend/code/grawantura/auth/: jwtsupport.py  web.py
backend/code/grawantura/auth/drivers/: commands.py  hashpassword.py  queries.py  tables.py
backend/code/grawantura/events/: web.py  ws.py
backend/code/grawantura/events/drivers/: commands.py  queries.py  tables.py
backend/code/grawantura/games/: web.py  webhelpers.py
backend/code/grawantura/games/drivers/: commands.py  queries.py  tables.py
backend/code/grawantura/home/: web.py
backend/code/grawantura/hostdashboard/: event.py  web.py
backend/code/grawantura/hostdashboard/drivers/: commands.py  queries.py  tables.py
backend/code/grawantura/hostdashboard/tests/: test_drivers.py
backend/code/grawantura/instances/drivers/: tables.py
backend/code/grawantura/main/: app.py  globals.py  settings.py  tables.py  testing.py  web.py
backend/code/grawantura/main/tests/: test_web.py
backend/code/grawantura/play/: web.py  webhelpers.py
backend/code/grawantura/plays/: web.py  webhelpers.py
backend/code/grawantura/questions/: web.py
backend/code/grawantura/teams/: web.py
backend/code/migrations/: env.py
backend/code/migrations/versions/: 051492999a25_create_question_table.py  05f461ac6ae7_add_is_deleted_for_questions.py  0e83e4bdee98_add_playeventtable.py  13f115f4d409_add_view_name_to_playevent.py  2a10a1f39710_add_index_for_play_event.py  2ce8788c305a_add_owner_to_the_game.py  35d11fd9227d_create_player_table.py  3e412320b832_create_instance_table.py  58535c885879_add_playevents_payload.py  625ef3ab0c22_create_profile_table.py  74225fb151ff_create_game_table.py  94c06ec1c2c6_add_index_for_questions.py  a3928e9a326e_add_teams.py  b4f80695f997_add_user_for_auth.py  c11c099e09c4_light_delete_for_games.py  c9b8043b9944_add_delete_to_events.py  ea8106296230_create_events.py  f2655797f31f_create_plays.py
(+154 files in other folders)
